# coworks

./: .actrc  .coveragerc  .gitignore  .pypirc  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Makefile  NOTICE  Pipfile  README.md  README.rst  conftest.py  context.json  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: pull_request_template.md  pypi-publish.yml
.github/workflows/: pypi-publish.yml
coworks/: __init__.py  aws.py  biz_storage.py  config.py  coworks.py  coworks.pyi  error.py  export.py  fixture.py  globals.py  mixins.py  operators.py  proxy.py  sensors.py  testing.py  testing.pyi  utils.py  version.py  wrappers.py
coworks/biz/: __init__.py  group.py  operators.py  sensors.py
coworks/blueprint/: __init__.py  admin.py  admin_blueprint.py  google_sheets.py  gsheets_blueprint.py  jinja_blueprint.py  mail.py  mail_blueprint.py  odoo.py  odoo_blueprint.py  okta_blueprint.py  profiler_blueprint.py  redis.py  sql_blueprint.py  sqlalchemy_blueprint.py  test_blueprint.py
coworks/blueprint/templates/: proxy.j2
coworks/cli/: __init__.py  client.py  factory.py  sfn.py  writer.py
coworks/cli/templates/: terraform.j2
coworks/cli/writer/: sfn.py  terraform.py  writer.py
coworks/context_manager/: __init__.py  sql.py  xray.py
coworks/cws/: __init__.py  client.py  command.py  deploy.py  deployer.py  error.py  exception.py  factory.py  fixture.py  info.py  informant.py  inspector.py  layers.py  new.py  runner.py  scons.py  sfn.py  utils.py  writer.py  zip.py  zip_archiver.py
coworks/cws/project_templates/: README.md  README.txt  app.py  project.cws.yml  template.env  vars.json
coworks/cws/templates/: api.j2  deploy.j2  destroy.j2  event.j2  lambda.j2  list.j2  local.j2  openapi.yml  plan.j2  project.cws.yml  provider.j2  resources.j2  rest_api.j2  rest_api_proxy.j2  tags.j2  terraform.j2  terraform_staging.j2
coworks/cws/writer/: __init__.py  sfn.py  terraform.py  writer.py
coworks/extension/: jsonapi.py  odoo.py  xray.py
coworks/extension/jsonapi/: __init__.py  data.py  fetching.py  jsonapi.py  (+1 more)
coworks/middleware/: __init__.py  middleware.py  sentry.py  sql.py  xray.py  xray_middleware.py
coworks/pytest/: fixture.py  local_server.py
coworks/tech/: __init__.py  csv.py  directory.py  google_sheets.py  jinja.py  mail.py  odoo.py  psql.py  s3.py  sql.py  tns.py
coworks/templates/: list.j2  openapi.yml  terraform.j2
docs/: api.rst  authorization.rst  biz.rst  biz_deployment.rst  biz_quickstart.rst  blueprint.rst  changelog.rst  cli.rst  code_of_conduct.md  command.rst  conf.py  configuration.rst  context_manager.rst  contributing.rst  deployment.rst  faq.rst  index.rst  installation.rst  middleware.rst  proxy.rst  quickstart.rst  requirements.txt  samples.rst  staging.rst  tech.rst  tech_deployment.rst  tech_quickstart.rst  tutorial.rst
docs/_static/: coworks.css
docs/_templates/: layout.html
samples/: Pipfile
samples/cosmicjs/: config.py  cosmicjs.py  cws.project.yml  website.py
samples/directory/: README.md  project.cws.yml  tests.http
samples/docs/: Pipfile  README.md  classical.py  complete.py  first.py  project.cws.yml  quickstart.cws.yml  quickstart1.py  quickstart2.py  simple.py  temp_admin_routes.rst
samples/headless/: Pipfile  config.py  cosmicjs.py  project.cws.yml  vars.json  website.py
samples/layers/: README.txt  project.cws.yml  tests.http
samples/mail/: Pipfile  config.py  mail.py  project.cws.yml
samples/odoo/: Pipfile  project.cws.yml  service.py
samples/website/: README.md  package-lock.json  package.json  project.cws.yml  tailwind.config.js
sleet/: version.py
test/: app.py  biz_ms.py  blueprint.py  client.py  conftest.py  local_server.py  microservice.py  mockup.py  pytest.ini  tech_ms.py  test_admin.py  test_authorization.py  test_biz_ms.py  test_blueprint.py  test_cli.py  test_environment.py  test_example.py  test_export.py  test_form.py  test_form_data.py  test_microservice.py  test_s3_data.py  test_sfn.py  test_tech_ms.py  test_writer.py
test/.chalice/: config.json
test/biz/: example.py
test/blueprint/: test_admin.py  test_blueprint.py
test/cli/: test_cli.py  test_environment.py  test_sfn.py  test_writer.py
test/coworks/: test_auth.py  test_content_type.py  test_cors.py  test_tech_ms.py
test/example/: app.py  client.py  example.py  export.py  test_app.py  test_example.py  test_run.py
test/manual/: app.py  test.http
test/tech/: test_csv.py  test_jinja.py  test_mail.py  test_s3.py
test/test_cli/: test_environment.py  test_sfn.py  test_writer.py
test/test_cws/: test_admin.py  test_auth.py  test_authorization.py  test_blueprint.py  test_cors.py  test_tech_ms.py
tests/: client.py  conftest.py  fixture.py  mockup.py  test_app.py
tests/coworks/: biz_ms.py  event.py  ms.py  tech_ms.py  test_auth.py  test_content_type.py  test_cors.py  test_ms.py
tests/cws/: project.cws.yml  test_client.py  test_cmd.py  test_cws.py  test_deploy.py  test_environment.py  test_example.py  test_project_file.py  test_s3_data.py  test_sfn.py  test_writer.py
tests/docs/: test_classical.py  test_client.py  test_complete.py  test_first.py  test_hello.py  test_quickstart.py  test_quickstart1.py  test_quickstart2.py  test_simple.py
tests/example/: Pipfile  SConstruct  _dev_vars.json  _prod_vars.json  cws.project.yml  example.py  first.py  project.cws.yml  quickstart1.py  quickstart2.py  quickstart3.py  test_example.py  test_first.py  test_quickstart.py  test_quickstart1.py  test_quickstart2.py  test_quickstart3.py  vars_dev.json
tests/src/: example.py  project.cws.yml  project.wrong.yml  test_cmd.py
tmp/: app.py
(+152 files in other folders)
