[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "coworks"
dynamic = ["version"]
description = "Coworks is a unified compositional microservices framework using Flask/Airflow on AWS serverless technologies."
readme = "README.rst"
requires-python = ">= 3.7"
license = { "file" = "LICENSE.txt" }
authors = [
    { name = "Guillaume Doumenc", email = "gdoumenc@fpr-coworks.com" }
]
keywords = ["python3", "serverless", "microservice", "flask", "airflow", "aws-lambda", "aws"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: System :: Distributed Computing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "anyconfig>=0.12",
    "boto3>=1.19",
    "flask>=2.3.0",
    "jsonapi-pydantic>=0.1.5",
    "markdown>=3.3.6",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.21.0",
    "requests-toolbelt>=0.10",
]

[project.urls]
Documentation = "https://coworks.readthedocs.io"
Source = "https://github.com/gdoumenc/coworks"

[project.scripts]
cws = "coworks.cws.client:client"

[bdist_wheel]
universal = 1
