[metadata]
name = coworks
version = attr: coworks.version.__version__
license_files = LICENSE.txt
description = Coworks is a unified compositional microservices framework using Flask on AWS serverless technologies.
long_description = file: README.rst
author = Guillaume Doumenc
author_email = gdoumenc@fpr-coworks.com
url = https://github.com/gdoumenc/coworks
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: System :: Distributed Computing
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = python3 serverless microservice flask aws-lambda aws
project_urls =
    Documentation = https://coworks.readthedocs.io/
    Issue Tracker = https://github.com/gdoumenc/coworks/issues

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True
install_requires =
    anyconfig>=0.12
    boto3>=1.19
    flask>=2.0
    markdown>=3.3.6
    pyyaml>=6.0

[options.packages.find]
exclude =
    tests

[options.package_data]
    coworks.cws.project_templates = *

[tool:pytest]
addopts = --cov --cov-config=setup.cfg
testpaths = tests

[options.entry_points]
console_scripts =
    cws = coworks.cws.client:client

[bdist_wheel]
universal = 1
